--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "framer-motion": "^10.0.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "sass": "^1.61.0",
+    "typescript": "^4.9.5",
+    "zustand": "^4.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,7 +33,8 @@
     ]
   },
   "prettier": {
-    "semi": false
+    "semi": false,
+    "singleQuote": true
   },
   "browserslist": {
     "production": [
